# SLIC-Superpixels

./: .gitignore  CMakeLists.txt  README.md  slic.cpp  slic.h  slicSuperpixels.cpp
picture/: Boat2DConnectivity.ppm  Boat_gray.ppm  Boat_rouge.ppm  HouseSeg_Gray.ppm  HouseSeg_Rouge.ppm  HouseSeg_tmp.ppm  lobster_seg.vol  lobster_seg_connect.vol  square.ppm
